--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,9 @@ dependencies {
     implementation 'com.github.liangzhongtai:FlowView:v1.1'
     implementation 'org.greenrobot:eventbus:3.1.1'
 
-   // implementation project(':rrokclient')
+    implementation project(':rrokclient')
 
-    implementation 'com.cn.request:rrokclient:1.0'
+    //implementation 'com.cn.request:rrokclient:1.0'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
