--- a/rrokclient/build.gradle
+++ b/rrokclient/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     //rxjava2
     api "io.reactivex.rxjava2:rxjava:2.2.10"
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 //    //AutoDispose解决RxJava内存泄漏
 //    api 'com.uber.autodispose:autodispose:1.3.0'
 //    api 'com.uber.autodispose:autodispose-android:1.3.0'
