Feat ：缓存改为非入侵时

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,8 @@ dependencies {
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0'
 
+    implementation 'com.uber.autodispose:autodispose:0.7.0'
+    implementation 'com.uber.autodispose:autodispose-android:0.7.0'
+    implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.7.0'
 
 }
