--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,39 @@ android {
         versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    buildTypes {
+
+    signingConfigs {
+        debug {
+            keyAlias 'rrokclient'
+            keyPassword 'rrokclient'
+            storeFile file("../../RrokDemo/rrokclient.jks")
+            storePassword 'rrokclient'
+        }
+
         release {
-            minifyEnabled false
+            keyAlias 'rrokclient'
+            keyPassword 'rrokclient'
+            storeFile file("../../RrokDemo/rrokclient.jks")
+            storePassword 'rrokclient'
+        }
+    }
+
+    buildTypes {
+        debug {
+            //开启混淆,删除无用代码
+            minifyEnabled true
+            //开启删除无用资源
+            shrinkResources true
+            signingConfig signingConfigs.debug
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        release {
+            //开启混淆,删除无用代码
+            minifyEnabled true
+            //开启删除无用资源
+            shrinkResources true
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -33,7 +63,7 @@ dependencies {
 
     implementation project(':rrokclient')
 
-    //implementation 'com.cn.request:rrokclient:1.0'
+    //implementation 'com.cn.request:rrokclient:1.1'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
@@ -53,5 +83,7 @@ dependencies {
     implementation 'com.uber.autodispose:autodispose:0.7.0'
     implementation 'com.uber.autodispose:autodispose-android:0.7.0'
     implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.7.0'
+
+    implementation 'com.orhanobut:logger:2.2.0'
 
 }
