Feat : 解决公共参数和传入参数冲突问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,12 @@ android {
 
     buildTypes {
         debug {
-            //开启混淆,删除无用代码
-            minifyEnabled true
-            //开启删除无用资源
-            shrinkResources true
-            signingConfig signingConfigs.debug
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            //开启混淆,删除无用代码
+//            minifyEnabled true
+//            //开启删除无用资源
+//            shrinkResources true
+//            signingConfig signingConfigs.debug
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
         release {
